Fix overlapping issues

--- a/style.css
+++ b/style.css
@@ -349,16 +349,16 @@ input:not(:checked) + .slider .sun {
     align-items: center;
     justify-content: space-around;
     flex-shrink: 0;
-    width: 25%;
+    width: 20%;
 }
 
 .selectors-container {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-shrink: 0;
-    width: 75%;
+    width: 80%;
 }
 
 .toggle-container {
@@ -487,7 +487,7 @@ input:not(:checked) + .slider .sun {
     text-align: start;
     width: 35%;
     padding-left: 10px;
-    padding-right: 10px;
+    padding-right: 30px;
     gap: 5px;
 }
 
@@ -542,7 +542,6 @@ input:not(:checked) + .slider .sun {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-width: 30px;
     height: 36px;
 }
 
@@ -829,8 +828,12 @@ input:not(:checked) + .slider .sun {
 
 /* Fix for overlapping controls in medium-small screens */
 @media (max-width: 620px) and (min-width: 481px) {
+    .selectors-container {
+        justify-content: end;
+    }
+
     .selector-container {
-        /*width: 45%;*/
+        padding-left: 5px;
     }
 
     .selector-container label {
@@ -878,8 +881,8 @@ input:not(:checked) + .slider .sun {
         margin: 5px 30px 5px 0;
     }
 
-    .selector-container label {
-        /*width: 50%;*/
+    .selector-container select {
+        font-size: 16px;
     }
 
     .calendar-navigation {
@@ -1002,7 +1005,7 @@ input:not(:checked) + .slider .sun {
     .selector-container select {
         width: 45%;
         text-align: center;
-        font-size: 16px; /* Slightly smaller font size for better fit */
+        font-size: 16px;
     }
 
     .selector-control-button:nth-of-type(1) {
